--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+
 *{
     margin: 0;
     box-sizing: border-box;
@@ -13,7 +15,7 @@ body {
 }
 body {
     position: relative;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', 'Orbitron', sans-serif;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
@@ -38,3 +40,7 @@ canvas,
 svg {
     max-width: 100%;
 }
+// Variables
+$green-color: #6cff8d;
+$dark-green-color: #6cff8c7a;
+
