--- a/src/assets/styles/loader.scss
+++ b/src/assets/styles/loader.scss
@@ -38,7 +38,7 @@
         border-radius: 2px;
         &--inner{
             height: 100%;
-            width: 25%;
+            width: 0;
             border-radius: 2px;
             background: $green-color;
         }
@@ -110,5 +110,13 @@
             width: 280px;
            }
         }
+    }
+    &__svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 85%;
+        opacity: 0;
     }
 }
