Estructura del header y primeros estilos

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -40,6 +40,13 @@ canvas,
 svg {
     max-width: 100%;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
+ul {
+    list-style: none;
+}
 // Variables
 $green-color: #6cff8d;
 $dark-green-color: #6cff8c7a;
