--- a/src/assets/styles/loader.scss
+++ b/src/assets/styles/loader.scss
@@ -14,6 +14,7 @@
     display: grid;
     place-items: center;
     font-family: 'Orbitron', sans-serif;
+    display: none;
     &__box{
         position: relative;
         width: 500px;
