Animación de linea abajo de texo

--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -29,3 +29,11 @@
         }
     }
 }
+
+.centered_link {
+    position: absolute;
+    font-size: 40px;
+    top: 40%;
+    left: 10%;
+    cursor: pointer;
+}
