--- a/src/assets/styles/coollinks.scss
+++ b/src/assets/styles/coollinks.scss
@@ -3,6 +3,7 @@
     display: grid;
     place-items: center;
     overflow: hidden;
+    
     &:before {
         content: "";
         position: absolute;
@@ -13,7 +14,7 @@
         background: currentColor;
         transform: scale3d(0, 1, 1);
         transform-origin: left;
-        transition: transform 0.4s ease-in-out;
+        transition: transform 0.3s cubic-bezier(.5, .5, .3, 1);
     }
     &:after {
         content: attr(data-text);
@@ -21,9 +22,19 @@
         top: 0;
         height: 100%;
         transform: translate3d(150%, 0, 0);
+        transition: transform 0.3s cubic-bezier(.5, .5, .3, 1);
     }
-    &:hover::before{
+    & span {
+        transition: transform 0.3s cubic-bezier(.5, .5, .3, 1);
+    }
+    &:hover::before {
         transform: scale3d(1, 1, 1);
         transform-origin: left;
+    }
+    &:hover:after {
+        transform: translate3d(0, 0, 0);
+    }
+    &:hover span {
+        transform: translate3d(-150%, 0, 0);
     }
 }
