--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -27,13 +27,26 @@
                 font-weight: 700;
             }
         }
+        @media(max-width:1200px) {
+            &__wrap{
+                width: 100vw;
+            }
+        }
+        @media(max-width:650px) {
+            &__sm {
+                display: none;
+            }
+        }
+        @media(max-width:370px) {
+            & {
+                left: 36%
+            }
+            &__wrap {
+                gap: 20%;
+            }
+            .coolLink[data-text="Home"]{
+                display: none;
+            }
+        }
     }
-}
-
-.centered_link {
-    position: absolute;
-    font-size: 40px;
-    top: 40%;
-    left: 10%;
-    cursor: pointer;
 }
