Link de redes y animaciones de iconos

--- a/src/assets/styles/coollinks.scss
+++ b/src/assets/styles/coollinks.scss
@@ -1,3 +1,4 @@
+@import "./base.scss";
 .coolLink {
     position: relative;
     display: grid;
@@ -86,4 +87,30 @@
             font-size: 23px;
         }
     }
+}
+.coloredIcon {
+    color: #fff;
+    font-size: 35px;
+    &:hover {
+        animation: coloredIconAnimation 0.2s infinite;
+    }
+    @keyframes coloredIconAnimation{
+        0% {
+            text-shadow: 5px 4px $red-color, -5px -6px $blue-color;
+        }
+        25% {
+            text-shadow: -5px -6px $red-color, 5px 4px $blue-color;
+        }
+        50% {
+            text-shadow: 5px -4px $red-color, -8px 4px $blue-color;
+        }
+        75% {
+            text-shadow: -8px -4px $red-color, -5px -4px $blue-color;
+        }
+        100% {
+            text-shadow: 5px 0 $red-color, 5px -4px $blue-color;
+        }
+        
+    }
+    // text-shadow: -10px -20px red, -15px -15px blue;
 }
