--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -49,4 +49,13 @@
             }
         }
     }
+    .socials {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 5rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
 }
