--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/bigboz');
+@import url('https://fonts.cdnfonts.com/css/duty-beauty');
 
+                
 *{
     margin: 0;
     box-sizing: border-box;
@@ -15,7 +18,7 @@ body {
 }
 body {
     position: relative;
-    font-family: 'Poppins', 'Orbitron', sans-serif;
+    font-family: 'Poppins', 'Orbitron',  'Duty Beauty', sans-serif;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
@@ -52,4 +55,5 @@ $green-color: #6cff8d;
 $dark-green-color: #6cff8c7a;
 $red-color: #f44336;
 $blue-color: #2196f3;
+$yellow-color: #ffea5c
 
