--- a/src/assets/styles/reviews.scss
+++ b/src/assets/styles/reviews.scss
@@ -52,3 +52,56 @@
         }
     }
 }
+.swiper__wrapper {
+    padding: 2rem 0;
+}
+.swiper {
+    min-height: 500px;
+}
+.review {
+    position: relative;
+    display: flex;
+    font-size: 16px;
+    padding: 5px;
+    &__card {
+        position: relative;
+        width: 100%;
+        padding: 2rem 0;
+        display: flex;
+    }
+    & svg {
+        width: 30px;
+        fill: $red-color;
+    }
+    &__topborder {
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #fff;
+    }
+    &__text {
+        span {
+            font-family: serif;
+            font-size: 30px;
+            font-weight: 600;
+            color: $red-color;
+        }
+    }
+    &__img {
+        width: 70px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 35px;
+    }
+    &__profile {
+        position: absolute;
+        left: 5rem;
+        bottom: -2rem;
+        display: flex;
+        flex-direction: column;
+        font-family: sans-serif;
+        font-size: 17px;
+    }
+}
