--- a/src/assets/styles/reviews.scss
+++ b/src/assets/styles/reviews.scss
@@ -56,7 +56,6 @@
     padding: 2rem 0;
 }
 .swiper {
-    
     user-select: none;
 }
 .review {
@@ -69,6 +68,10 @@
         width: 100%;
         padding: 2rem 0;
         display: flex;
+        @media (min-width:650px) {
+            font-size: 18;
+            font-family: sans-serif;
+        }
     }
     & svg {
         width: 30px;
@@ -105,4 +108,46 @@
         font-family: sans-serif;
         font-size: 17px;
     }
+}
+.swiper-slide{
+    filter: blur(2px) !important;
+    transform: scale(0.8) !important;
+    transition: all 0.2s;
+
+}
+.swiper-slide-active{
+    filter: blur(0) !important;
+    transform: scale(1) !important;
+}
+.swiper__tools {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-top: 5rem;
+    padding: 0 4rem 0 2rem;
+}
+.swiper__buttons {
+    display: flex;
+    button {
+        position: relative;
+        background-color: transparent;
+        padding: 0.5rem 3rem;
+        border-radius: 50px;
+        border: 1px solid hsl(208, 96%, 74%);
+        margin-right: 1rem;
+        user-select: none;
+        &:after {
+            display: none;
+        }
+        img {
+            filter: invert(100%);
+        }
+        &:hover {
+            background-color: #ffffff21;
+        }
+        
+    }
+}
+.swiper-pagination {
+    position: relative;
 }
