Responsive swiper tools

--- a/src/assets/styles/reviews.scss
+++ b/src/assets/styles/reviews.scss
@@ -30,10 +30,16 @@
                 font-family: sans-serif;
             }
             &__img {
-                width: 150px;
-                height: 150px;
+                width: 110px;
+                height: 110px;
                 border-radius: 50%;
                 border-right: 2px solid $red-color;
+                @media (min-width:400px) {
+                    & {
+                        width: 150px;
+                        height: 150px;
+                    }
+                } 
             }
             &__col {
                 display:flex;
@@ -76,6 +82,11 @@
     & svg {
         width: 30px;
         fill: $red-color;
+        @media (min-width:500px) {
+            & {
+                width: 40px;
+            }
+        }
     }
     &__topborder {
         width: 100%;
@@ -110,13 +121,13 @@
     }
 }
 .swiper-slide{
-    filter: blur(2px) !important;
+    // filter: blur(2px) !important;
     transform: scale(0.8) !important;
     transition: all 0.2s;
 
 }
 .swiper-slide-active{
-    filter: blur(0) !important;
+    // filter: blur(0) !important;
     transform: scale(1) !important;
 }
 .swiper__tools {
@@ -131,11 +142,14 @@
     button {
         position: relative;
         background-color: transparent;
-        padding: 0.5rem 3rem;
+        padding: 0.5rem 2rem;
         border-radius: 50px;
-        border: 1px solid hsl(208, 96%, 74%);
+        border: 1px solid #fff;
         margin-right: 1rem;
         user-select: none;
+        @media (min-width:370px) {
+            padding: 0.5rem 3rem;
+        }
         &:after {
             display: none;
         }
@@ -150,4 +164,13 @@
 }
 .swiper-pagination {
     position: relative;
+}
+.swiper-pagination-bullet {
+    width: 35px;
+    height: 4px;
+    border-radius: 50px;
+    background: #fff;
+}
+.swiper-pagination-bullet-active {
+    width: 70px;
 }
