--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -148,4 +148,51 @@
         opacity: 0;
     }
 }
+@media (max-width:1350px) {
+    .projects {
+        padding: 3rem;
+    }
+    .project__img img {
+        width: 74vw;
+        right: 5rem;
+    }
+    .project__infos--name {
+        font-size: 38px;
+    }
+    .project .coolCircleEyeButton {
+        transform: translate(-14rem, -3rem);
+    }
+}
+@media (max-width:750px) {
+    .projects {
+        padding: 1rem;
+    }
+    .project__tags {
+        flex-direction: row;
+        top: 0;
+        left: 0;
+    }
+    .project__infos--name {
+        font-size: 35px;
+        span {
+            display: none;
+        }
+    }
+    .project__img img {
+        width: 85vw;
+        right: 3rem;
+    }
+}
+@media (max-width:440px) {
+    .project .coolCircleEyeButton {
+        transform: translate(0);
+    }
+    .project__tags {
+        gap: 6px;
+        font-size: 14px;
+    }
+    .project__header span {
+        font-size: 25px;
+    }
+}
 
