--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -67,6 +67,18 @@ $box-shadow-blue2: rgba(31,38,135,0.67);
     min-height: 100vh;
     padding-top: 5rem;
     @media (min-width:650px) {
-        padding: 4rem;
+        padding: 5rem;
+    }
+    &__header {
+        &-title {
+            font-weight: 400;
+            font-size: 17px;
+            color: #666;
+        }
+        &-subtitle {
+            font-size: 27px;
+            font-weight: 700;
+        }
     }
 }
+
