--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -8,6 +8,48 @@
     @media (max-width:1100px) {
         padding: 2rem;
     }
+    &__profile {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 3rem;
+        &-item {
+            position: relative;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            img {
+                width: 90px;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+        }
+        &-col {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            font-size: 17px;
+            z-index: 1;
+        }
+        &-bg {
+            position: absolute;
+            width: 100%;
+            height: 100px;
+            background: #f6d5a4;
+            border-radius: 5px;
+            left: 20%;
+        }
+    }
+    &__socials {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3rem;
+        padding-bottom: 3rem
+        & {
+            font-size: 25px
+        };
+    }
 }
 .form {
     &__info {
