--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -49,6 +49,14 @@
         & {
             font-size: 20px
         };
+        @media (max-width:900px) {
+            font-size: 14px;
+            gap: 1.5rem;
+            padding-bottom: 3rem;
+        }
+        @media (max-width:1100px) {
+            padding-bottom: 3rem;
+        }
     }
     &__footer {
         position: absolute;
@@ -58,6 +66,9 @@
         align-items: center;
         justify-content: space-around;
         width: 100%;
+        @media (max-width:765px) {
+            flex-wrap: wrap;
+        }
         &-link {
             width: 100%;
             text-align: center;
