--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -9,7 +9,7 @@
     background-size: cover;
     .header {
         position: absolute;
-        top: 1rem;
+        top: -100%;
         left: 50%;
         transform: translateX(-50%);
         z-index: 2;
@@ -55,7 +55,7 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        bottom: 10rem;
+        bottom: -100%;
         display: flex;
         align-items: center;
         gap: 1rem;
@@ -63,7 +63,7 @@
     }
     .scrollDown {
         position: absolute;
-        bottom: 3rem;
+        bottom: -100%;
         left: 50%;
         transform: translateX(-50%);
         z-index: 2;
