--- a/src/assets/styles/loader.scss
+++ b/src/assets/styles/loader.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 
 .loading {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -14,7 +14,7 @@
     display: grid;
     place-items: center;
     font-family: 'Orbitron', sans-serif;
-    display: none;
+    // display: none;
     &__box{
         position: relative;
         width: 500px;
